@@ -35,6 +35,9 @@ THE SQUIRRELMAIL TEAM
  
    Arabic        Asrar Abbasi <asrar@canasoft.net>
                  Naveed Saqib <naveed.saqib@biznas.com>
+   Basque        Iker Etxaniz ietxaniz@csiss.jesuitak.org
+                 Eneko Harreguy eharreguy@csiss.jesuitak.org
+                 Jabier Martinez jmartinez@csiss.jesuitak.org
    Bulgarian     Stanislav Yordanov <stanprog@yahoo.com>  
    Catalan       Josep Sanz <jsanz@fa.upc.es>
    Croatian      Albert Novak <Albert.Novak@CARNet.hr> 
